[package]
name = "mongo-lock"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Distributed locks with MongoDB"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2", default-features = false, features = ["sync"] }
rand = "*"
